@@ -2502,101 +2502,27 @@ name|size
 argument_list|()
 condition|)
 block|{
-name|long
-name|totAfterMergeBytes
-init|=
-literal|0
-decl_stmt|;
+comment|// Don't enforce max merged size here: app is explicitly
+comment|// calling expungeDeletes, and knows this may take a
+comment|// long time / produce big segments (like optimize):
+specifier|final
 name|int
-name|upto
+name|end
 init|=
-name|start
-decl_stmt|;
-name|boolean
-name|done
-init|=
-literal|false
-decl_stmt|;
-while|while
-condition|(
-name|upto
-operator|<
+name|Math
+operator|.
+name|min
+argument_list|(
 name|start
 operator|+
 name|maxMergeAtOnceExplicit
-condition|)
-block|{
-if|if
-condition|(
-name|upto
-operator|==
+argument_list|,
 name|eligible
 operator|.
 name|size
 argument_list|()
-condition|)
-block|{
-name|done
-operator|=
-literal|true
-expr_stmt|;
-break|break;
-block|}
-specifier|final
-name|SegmentInfo
-name|info
-init|=
-name|eligible
-operator|.
-name|get
-argument_list|(
-name|upto
 argument_list|)
 decl_stmt|;
-specifier|final
-name|long
-name|segBytes
-init|=
-name|size
-argument_list|(
-name|info
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|totAfterMergeBytes
-operator|+
-name|segBytes
-operator|>
-name|maxMergedSegmentBytes
-condition|)
-block|{
-comment|// TODO: we could be smarter here, eg cherry
-comment|// picking smaller merges that'd sum up to just
-comment|// around the max size
-break|break;
-block|}
-name|totAfterMergeBytes
-operator|+=
-name|segBytes
-expr_stmt|;
-name|upto
-operator|++
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|upto
-operator|==
-name|start
-condition|)
-block|{
-comment|// Single segment is too big; grace it
-name|start
-operator|++
-expr_stmt|;
-continue|continue;
-block|}
 if|if
 condition|(
 name|spec
@@ -2624,7 +2550,7 @@ name|subList
 argument_list|(
 name|start
 argument_list|,
-name|upto
+name|end
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -2661,15 +2587,8 @@ argument_list|)
 expr_stmt|;
 name|start
 operator|=
-name|upto
+name|end
 expr_stmt|;
-if|if
-condition|(
-name|done
-condition|)
-block|{
-break|break;
-block|}
 block|}
 return|return
 name|spec
