@@ -1616,6 +1616,39 @@ name|doRandomOptimizeAssert
 init|=
 literal|true
 decl_stmt|;
+DECL|method|expungeDeletes
+specifier|public
+name|void
+name|expungeDeletes
+parameter_list|(
+name|boolean
+name|doWait
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|w
+operator|.
+name|expungeDeletes
+argument_list|(
+name|doWait
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|expungeDeletes
+specifier|public
+name|void
+name|expungeDeletes
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|w
+operator|.
+name|expungeDeletes
+argument_list|()
+expr_stmt|;
+block|}
 DECL|method|setDoRandomOptimize
 specifier|public
 name|void
