@@ -50,6 +50,19 @@ name|lucene
 operator|.
 name|document
 operator|.
+name|StringField
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
 name|TextField
 import|;
 end_import
@@ -701,6 +714,304 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+DECL|method|testExpungeMaxSegSize
+specifier|public
+name|void
+name|testExpungeMaxSegSize
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+specifier|final
+name|IndexWriterConfig
+name|conf
+init|=
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+decl_stmt|;
+specifier|final
+name|TieredMergePolicy
+name|tmp
+init|=
+operator|new
+name|TieredMergePolicy
+argument_list|()
+decl_stmt|;
+name|tmp
+operator|.
+name|setMaxMergedSegmentMB
+argument_list|(
+literal|0.01
+argument_list|)
+expr_stmt|;
+name|tmp
+operator|.
+name|setExpungeDeletesPctAllowed
+argument_list|(
+literal|0.0
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setMergePolicy
+argument_list|(
+name|tmp
+argument_list|)
+expr_stmt|;
+specifier|final
+name|RandomIndexWriter
+name|w
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|,
+name|dir
+argument_list|,
+name|conf
+argument_list|)
+decl_stmt|;
+name|w
+operator|.
+name|setDoRandomOptimize
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+specifier|final
+name|int
+name|numDocs
+init|=
+name|atLeast
+argument_list|(
+literal|200
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|numDocs
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|newField
+argument_list|(
+literal|"id"
+argument_list|,
+literal|""
+operator|+
+name|i
+argument_list|,
+name|StringField
+operator|.
+name|TYPE_UNSTORED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|newField
+argument_list|(
+literal|"content"
+argument_list|,
+literal|"aaa "
+operator|+
+name|i
+argument_list|,
+name|TextField
+operator|.
+name|TYPE_UNSTORED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+block|}
+name|w
+operator|.
+name|optimize
+argument_list|()
+expr_stmt|;
+name|IndexReader
+name|r
+init|=
+name|w
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|numDocs
+argument_list|,
+name|r
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|numDocs
+argument_list|,
+name|r
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|w
+operator|.
+name|deleteDocuments
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"id"
+argument_list|,
+literal|""
+operator|+
+operator|(
+literal|42
+operator|+
+literal|17
+operator|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|r
+operator|=
+name|w
+operator|.
+name|getReader
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|numDocs
+argument_list|,
+name|r
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|numDocs
+operator|-
+literal|1
+argument_list|,
+name|r
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|w
+operator|.
+name|expungeDeletes
+argument_list|()
+expr_stmt|;
+name|r
+operator|=
+name|w
+operator|.
+name|getReader
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|numDocs
+operator|-
+literal|1
+argument_list|,
+name|r
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|numDocs
+operator|-
+literal|1
+argument_list|,
+name|r
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 end_class
